src/test/deca/syntax/invalid/declVar-invalidType.lex
declVar-invalidType.deca:2: